@@ -13,7 +13,9 @@ if test -z "$mkdir_p"; then
 	AC_SUBST(mkdir_p)
 fi
 
-CFLAGS="-Wall -W -g -O2"
+if test -z "$CFLAGS"; then
+	CFLAGS="-Wall -W -g -O2"
+fi
 CPPFLAGS="$CPPFLAGS -D_FILE_OFFSET_BITS=64 -D_REENTRANT -DFUSE_USE_VERSION=22"
 
 AC_ARG_ENABLE(kernel-module,
